회원가입 진행중..

--- a/src/main/resources/egovframework/message/message-common_en.properties
+++ b/src/main/resources/egovframework/message/message-common_en.properties
@@ -7,6 +7,8 @@ button.create=Create
 button.reset=Reset
 button.delete=Delete
 button.private=Private
+button.login=Login
+button.join=Join
 search.choose=Select Choose
 search.keyword=Search
 search.name=name
@@ -24,6 +26,8 @@ title.sample.edate=Notice Pop Enddate
 title.sample.noti_yn=Notice Flag
 title.sample.usr_open=User Open
 title.sample.fileupload=File Upload
+title.sample.member_id=Member Id
+title.sample.member_pwd=Member Password
 
 # image name #
 image.search=btn_form_search_en.gif
