ajax 댓글작업까지!

--- a/src/main/resources/egovframework/message/message-common_en.properties
+++ b/src/main/resources/egovframework/message/message-common_en.properties
@@ -8,7 +8,9 @@ button.reset=Reset
 button.delete=Delete
 button.private=Private
 button.login=Login
+button.logout=Logout
 button.join=Join
+button.complete=Complete
 search.choose=Select Choose
 search.keyword=Search
 search.name=name
@@ -26,8 +28,9 @@ title.sample.edate=Notice Pop Enddate
 title.sample.noti_yn=Notice Flag
 title.sample.usr_open=User Open
 title.sample.fileupload=File Upload
-title.sample.member_id=Member Id
-title.sample.member_pwd=Member Password
+title.member.member_id=Member Id
+title.member.member_pwd=Member Password
+title.member.member_email=Member Email
 
 # image name #
 image.search=btn_form_search_en.gif
